# googau

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: codeqa.yml
googau/: __init__.py  calendar.py  documents.py  drive.py  gmail.py  sessions.py  sheets.py
googau/constants/: __init__.py  drive_constants.py  sheets_constants.py
tests/: test_calendar.py  test_documents.py  test_drive.py  test_gmail.py  test_sessions.py  test_sheets.py
