[tool.poetry]
name = "googau"
version = "0.1.0"
description = "A helper library for automating your work with Google Workspace"
authors = ["Theodore Aptekarev <aptekarev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
google-api-python-client = "^2.70.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.8.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pylint = "^2.15.9"
mypy = "^0.991"
pydocstyle = "^6.1.1"
bandit = "^1.7.4"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
