[tool.poetry]
name = "googau"
version = "1.2.1"
description = "A helper library for automating your work with Google Workspace"
authors = ["Theodore Aptekarev <aptekarev+googau@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2.138.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
bandit = "^1.7.4"
black = "^22.12.0"
pytest = "^7.2.0"
ruff = "^0.5.5"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
